# twiga-wikipedia-chunker

./: .env.template  .gitignore  README.md  hello.py  pyproject.toml
src/: chunk.py  cli.py  config.py  embed.py  keyword_extraction.py  pdf_to_docs.py  visualize.py  wikipedia.py
